--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 DATABASE="your_database_name"
 
 JWT_SECRET="your_jwt_secret"
+
+CLOUD_NAME=dv5yymidd
+CLOUD_API_KEY=891729624222638
+CLOUD_API_SECRET=h9RcYUM1S5335c7Gz57sZK3QuNI
+CLOUD_FOLDER=kerela_lottery
