--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
