--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "path": "^0.12.7",
     "zod": "^3.25.74"
   }
 }
